# Itch-creators

./: .dockerignore  .gitignore  BUGFIXES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ISSUES.md  Dockerfile  ENHANCED_LOGGING_EXAMPLE.md  LICENSE  LOGGING_AND_DEBUGGING.md  README.md  README_SCRAPER.md  REVIEW.md  requirements.txt  scraper_review.patch
.github/workflows/: ci.yml  scrape.yml  scraper.yml
docs/: claude.md  implementation-plan.md  qa-review-pass-01.md
scraper/: .env.example  pyproject.toml
scraper/src/: db.py
scraper/tests/: test_db.py
src/: __main__.py  backfiller.py  browse_scraper.py  db.py  enricher.py  feed_poller.py  http_client.py  logger.py  main.py  models.py  scorer.py  seeder.py
src/parsers/: game.py  profile.py
tests/: test_backfiller.py  test_db.py  test_enricher.py  test_feed_poller.py  test_http_client.py  test_scorer.py
tests/fixtures/: feed_sample.xml  game_no_ratings.html  game_sample.html  profile_sample.html
tests/parsers/: test_game.py  test_profile.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/creator/[name]/: page.tsx
web/src/components/: PageJumpInput.tsx
web/src/lib/: db.ts  types.ts
